--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "jenkins-coverage-badge",
   "description": "crate shield.io badge from jenkins cobertura coverage",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "server.js",
   "dependencies": {
     "request": "2.53.0",
     "express": "4.x"
   },
+  "preferGlobal": "true",
   "bin": {
 	  "jenkins-coverage-badge": "./server.js"
   },
